--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
+}
+.board{
+  width: 500px;
+  height: 600px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border: .25px solid black;
+  flex-direction: column;
+  position: relative;
+  border-radius: 1.5rem;
+  box-shadow: .25px .25px 10px rgb(84, 84, 121);
+  background-image: url('./Assets/pexels-brett-sayles-1431822.jpg');
+  background-size: cover;
+}
+h1 {
+  padding: 10px;
+  border-radius: 10px;
+  text-align: center;
+  background-color: rgba(255,255,0,.3);
+}
+p{
+  text-align: center;
+  padding: 5px;
+  font-weight: 700;
+}
+.board .header{
+  position: absolute;
+  top: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.board .header button{
+  background-color: transparent;
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
+}
+input{
+  border: none;
+  padding: 10px 2rem;
+  text-align: center;
+  border-radius: 1.5rem;
+}
+.content{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 3rem;
+}
+h3{
+  text-align: center;
+}
+.minMax{
+  display: flex;
+}
+/*Error Styling*/
+.error{
+  font-size: 2rem;
   color: white;
+  margin-top: 3.5rem;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/*Media Query*/
+@media only screen and (max-width:500px) {
+    .board{
+      width: 350px; 
+    }
 }
